--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class= "cabecalho-imagem"src="images.png" alt="logo da alurastart">
+        <img class= "cabecalho-imagem"src="barbie.png" alt="logo da alurastart">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
