--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <header class="cabecalho">
         <img class= "cabecalho-imagem"src="barbie.png" alt="logo da alurastart">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Escola</li>
-            <li class="cabecalho-lista-item">Estudante</li>
+            <li class="cabecalho-lista-item">Mundo</li>
+            <li class="cabecalho-lista-item">Da barbie</li>
         </ul>
     </header>
-<section>class"/section>
-</body>
+    <section>"Barbie é uma boneca e personagem fictícia fabricada pela empresa estadunidense de brinquedos Mattel, Inc. e lançada em 9 de março de 1959. A empresária Ruth Handler é creditada como a criadora da boneca usando uma boneca alemã chamada Bild Lilli como sua inspiração.[1] Barbie é a figura principal de uma marca de bonecas e acessórios da Mattel, incluindo outros membros da família e bonecas colecionáveis. A Barbie tem sido uma parte importante do mercado de bonecas por mais de seis décadas e tem sido objeto de inúmeras controvérsias e ações judiciais, muitas vezes envolvendo paródias da boneca e seu estilo de vida. A Mattel vendeu mais de um bilhão de bonecas Barbie, tornando-se a maior e mais lucrativa linha da empresa.[2]>
+</body>A marca se expandiu em uma franquia multimídia de longa data desde o final dos anos 1980, foram desenvolvidos videogames e filmes animados por computador lançados em formatos de vídeo doméstico e transmitidos regularmente no canal a cabo Nickelodeon nos Estados Unidos de 2002 a 2017.[3] Desde 2017, a franquia foi movida para serviços de streaming.[4][5][6]
+
+Barbie e seu melhor amigo Ken foram descritos como as duas bonecas mais populares do mundo.[7] Desde o seu lançamento, a Barbie transformou o negócio de brinquedos em comunidades ricas globalmente, tornando-se um veículo para a venda de mercadorias relacionadas (acessórios, roupas, amigos e parentes da Barbie, etc.). Escrevendo para o Journal of Popular Culture em 1977, Don Richard Cox observou que a Barbie tem um impacto significativo nos valores sociais ao transmitir características de independência feminina e, com sua infinidade de acessórios, um estilo de vida idealizado e sofisticado que pode ser compartilhado com amigos ricos.[8]
 </html>
